# kaggle-Agent

./: .agents-cli-spec.md  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  agent_building_methods_extraction.txt  keggle Agent.code-workspace  pyproject.toml
.agents/: AGENTS.md  (+1 more)
assignment_details/30_reference_material/30_runnable_codelab_projects/CL5 Vibecode and Deploy a Frontend for an ADK agent/submission_frontend/: README.md  pyproject.toml
project_build/: .agents-cli-spec.md  Dockerfile  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml
project_build/artifacts/: README.md  spec_change_log.md
project_build/artifacts/build_plans/: build_plan_v1.md
project_build/artifacts/gate_results/: gate_2_vertical_slice.md  gate_3_golden_tests.md  gate_4_agent_evals.md  gate_6_submission_readiness.md  gate_7_adk_upgrade.md
project_build/artifacts/rebuilds/: fresh_rebuild_v2.md
project_build/artifacts/rebuilds/fresh_rebuild_v1_same_session_workspace/portfolio_agent/: security.py  tracing.py
project_build/artifacts/rebuilds/fresh_rebuild_v1_same_session_workspace/specs/: 00_README_SPEC_INDEX.md  03_agent_architecture.md  07_security_privacy_spec.md  13_demo_video_script.md  23_spec_adequacy_and_build_gates.md  ALL_SPECS_COMBINED.md
project_build/artifacts/rebuilds/fresh_rebuild_v1_workspace/fresh_rebuild_v1/: reporting.py  test_rebuild.py  tools.py
project_build/artifacts/rebuilds/fresh_rebuild_v2_bundle/: README.md
project_build/artifacts/rebuilds/fresh_rebuild_v2_workspace/portfolio_agent_rebuild/: reporting.py  tracing.py
project_build/artifacts/rebuilds/v1/: fresh_rebuild_v1.md
project_build/artifacts/spec_reviews/: spec_review_v1.md  spec_review_v2_adk_upgrade.md
project_build/data/eval/: missing_earned_premium.csv
project_build/notes/: README.md
project_build/notes/10_start_here/: 01_notes_map.md  02_repository_pyramid.md
project_build/notes/30_full_notes/: 01_capstone_adk_expansion_plan.md
project_build/portfolio_agent/: README.md  __init__.py  adk_tools.py  agent.py  callbacks.py  config.py  fast_api_app.py  run.py  security.py  service.py  tracing.py
project_build/portfolio_agent/adk/: adk_tools.py  callbacks.py
project_build/portfolio_agent/app_utils/: telemetry.py  typing.py
project_build/portfolio_agent/core/: reporting.py  schemas.py  security.py  tools.py
project_build/portfolio_agent/observability/: tracing.py
project_build/portfolio_agent/support/: config.py  skill_context.py
project_build/skills/extract_pdf_text/: SKILL.md
project_build/skills/extract_pdf_text/scripts/: extract_pdf_text.py
project_build/tests/: test_eval_report_quality.py  test_eval_security.py  test_golden.py  test_security.py  test_tools.py
project_build/tests/eval/: eval_cases.yaml  eval_config.yaml  run_eval.py
project_build/tests/eval/datasets/: basic-dataset.json
project_build/tests/eval/eval_results/: eval_scorecard.json
project_build/tests/eval/eval_results/reports/: portfolio_review_EVAL-001.md  portfolio_review_EVAL-002.md  portfolio_review_EVAL-003.md  portfolio_review_EVAL-004.md  portfolio_review_EVAL-006.md  portfolio_review_EVAL-007.md  portfolio_review_EVAL-008.md  portfolio_review_EVAL-009.md  portfolio_review_EVAL-010.md
project_build/tests/golden/: clean_portfolio.csv
project_build/tests/integration/: test_adk_root_agent.py  test_cli.py  test_fast_api_app.py  test_offline_mode.py  test_runtime_skill.py  test_trace_events.py
project_build/tests/unit/: test_adk_tools.py  test_callbacks.py  test_extended_anomalies.py
(+460 files in other folders)
