[project]
name = "keggle-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "google-adk>=2.0.0,<3.0.0",
    "google-genai>=2.9.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "ruff>=0.14.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
