[project]
name = "kaggle-agent"
version = "0.1.0"
description = "Agentic actuarial portfolio monitoring workflow for the Kaggle Agents Capstone"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "google-adk>=2.0.0,<3.0.0",
    "google-genai>=2.9.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "ruff>=0.14.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[evaluation]>=1.156.0",
]
lint = [
    "codespell>=2.4.1",
    "mypy>=1.19.0",
    "ruff>=0.14.0",
    "ty>=0.0.56",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ty.rules]
deprecated = "ignore"
invalid-argument-type = "ignore"
invalid-parameter-default = "ignore"
invalid-return-type = "ignore"
not-iterable = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"
unsupported-operator = "ignore"
