[project]
name = "expense-manager-dashboard"
version = "0.1.0"
description = "Manager dashboard for ADK Agent Runtime HITL approvals"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "google-adk>=2.0.0,<3.0.0",
  "google-auth>=2.29.0,<3.0.0",
  "google-cloud-aiplatform[agent-engines]>=1.156.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=9.0.0,<10.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "ruff>=0.15.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
